[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "timebase"
version = "0.0.1"
authors = [
    { name="Bryan M. Li", email="bryan.li@ed.ac.uk" },
    { name="Filippo Corponi", email='filippo.corponi@ed.ac.uk' },
]
description = "Codebase for Timebse"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/april-tools/bayesian-hrv"
"Bug Tracker" = "https://github.com/april-tools/bayesian-hrv"