[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timebase"
version = "0.0.1"
authors = [
    { name="Filippo Corponi", email='filippo.corponi@ed.ac.uk' },
    { name="Bryan M. Li", email="bryan.li@ed.ac.uk" },
]
description = "Codebase of the npj Mental Health Research paper A Bayesian analysis of heart rate variability changes over acute episodes of bipolar disorder."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "bayesian",
    "hrv",
    "timebase",
    "mood-disorder",
    "personal-sensing",
    "wearable",
    "mental-health",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
"Homepage" = "https://github.com/april-tools/bayesian-hrv"
"Bug Tracker" = "https://github.com/april-tools/bayesian-hrv/issues"